feat: finish proxy implementation
